# ot2021

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: architecture.md  kayttoohje.md  kirjanpito.md  testaus.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: event_queue.py  game_loop.py  game_save.py  level.py  main.py  physics.py  renderer.py  settings.py  sounds.py
src/game_logic/: game_loop.py  level.py  physics.py
src/game_utils/: game_save.py  sounds.py
src/gamelogic/: level.py  physics.py
src/level_maps/: level1
src/saved_games/: ot_platformer_2021_12_20_5_48_47  savegame  testsave
src/sprites/: actor_sprite.py  button.py  coin.py  game_sprite.py  mob.py  player.py  tile.py  tiles.py  wall.py
src/tests/: game_file_test.py  game_loop_test.py  game_sprite_test.py  level_test.py  physics_test.py  save_game_test.py
src/utils/: game_file.py  scale_mouse.py  settings.py
viikko2/: pyproject.toml
viikko2/poetry-testi/: pyproject.toml
