[tool.poetry]
name = "ot_harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Ruben Drayton <ruben.drayton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pygame = "^2.1.0"
invoke = "^1.6.0"
numpy = "^1.21.4"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
